--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcc 'D'
 - !lcsh 'Great Britain -- Colonies'
 - !lcsh 'United States -- Relations -- Great Britain'
+- GITenberg
 title: 'The Pan-Angles
 
   A Consideration of the Federation of the Seven English-Speaking Nations'
